# caravan

./: .env.example  .gitignore  Cargo.toml  README.md
crates/caravan-bin/: Cargo.toml
crates/caravan-bin/src/: main.rs
crates/caravan-core/: Cargo.toml
crates/caravan-core/src/: events.rs  lib.rs  model_config.rs  model_openai_compatible.rs  model_runtime_config.rs  prompt.rs
crates/caravan-tui/: Cargo.toml
crates/caravan-tui/src/: app.rs  input.rs  ui.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: approval.rs  approval_queue.rs  commands.rs  events.rs  file_snippet.rs  lib.rs  manual_context.rs  model.rs  model_config.rs  model_gateway.rs  model_openai_compatible.rs  model_openai_config.rs  model_openai_http.rs  model_openai_request.rs  model_openai_types.rs  model_registry.rs  model_runtime_config.rs  model_tool_request.rs  model_types.rs  project_memory.rs  prompt.rs  runner.rs  tool_events.rs  tool_policy.rs  tool_schema.rs  tools.rs  transcript.rs  workspace_reference.rs  write_intent.rs  write_preview.rs
crates/kernel/src/commands/: help.rs  (+3 more)
crates/kernel/tests/: public_api.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  input.rs  ui.rs
crates/tui/tests/: public_api.rs
docs/: COMMANDS.md  STRUCTURE.md  WRITE_SANDBOX.md
src/: app.rs  commands.rs  events.rs  input.rs  main.rs  model.rs  model_config.rs  model_gateway.rs  model_openai_compatible.rs  model_openai_request.rs  model_openai_types.rs  model_registry.rs  model_runtime_config.rs  model_types.rs  runner.rs  storage.rs  ui.rs
(+55 files in other folders)
