[workspace]
members = ["crates/caravan-core"]
resolver = "2"

[package]
name = "caravan"
version = "0.1.0"
edition = "2024"

[dependencies]
caravan-core = { path = "crates/caravan-core" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
